2003-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-find-w3m-buffer): Bind `w3m-safe-url-regexp' to
	the value specified peculiarly by each MUA.
	(w3m-with-w3m-buffer): Ditto.

	* mew-w3m.el (mew-w3m-view-inline-image): Don't bind
	`w3m-safe-url-regexp' there.

2003-12-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-view-inline-image): Fix last change.

2003-12-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-view-inline-image): Use `w3m-toggle-inline-images'.
	(mew-mime-text/html-w3m): Put the `w3m-images' text property in
	the message buffer.

	* w3m-util.el (w3m-find-w3m-buffer): Fix for Mew.

2003-12-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-toggle-inline-images): Wrap it with
	`w3m-with-w3m-buffer'.

	* w3m-util.el (w3m-find-w3m-buffer): New function.
	(w3m-with-w3m-buffer): New macro.

2003-12-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el (w3m-antenna-string): Renamed from
	`string-with-default'.
	(w3m-antenna-string-create): Renamed from
	`string-with-default-value-create'.
	(w3m-antenna-sites): Change its customize spec.

	* w3m-xmas.el (w3m-window-hscroll, w3m-current-column,
	w3m-set-window-hscroll): Import definitions from w3m.el.
	(w3m-run-at-time): Renamed from `w3m-xmas-run-at-time'.

	* w3m.el (w3m-window-hscroll, w3m-current-column,
	w3m-set-window-hscroll): Export definitions for XEmacs to
	w3m-xmas.el.

2003-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_SET_VANILLA_FLAG): New function specifying the
	`VANILLA_FLAG' variavle.  XEmacs 21.5 needs to be given `-vanilla'
	rather than `-q -no-site-file'.
	(AC_EMACS_LISP): Use `VANILLA_FLAG'.
	(AC_PATH_EMACS): Call `AC_SET_VANILLA_FLAG'.
	(AC_ADD_LOAD_PATH): Use `VANILLA_FLAG'.
	(AC_CHECK_ELISP): Ditto.

	* configure.in: Check for `EGREP' before calling `AC_PATH_EMACS'.

	* Makefile.in (VANILLA_FLAG): New variable.
	(FLAGS): Use it.
	(very-slow): Use it.

	* doc/Makefile.in (VANILLA_FLAG): New variable.